--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "element-react": "^1.0.14",
+    "element-theme-default": "^1.3.7",
     "es6-promise": "^3.3.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
